{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "9960009f-add1-4825-8ba7-65d942963098",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "19daf3cf-46b1-4665-9ae1-65866e8a3788",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0b1656ba-3d84-4bd3-8274-1a0ff6006f59",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "activate",
                    "type": "Button",
                    "id": "e0d6e856-c355-4dbb-a9ce-a2add486e570",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "09faf2c6-6797-4fa7-a045-8d11631fb67f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa42c906-d2bb-4af7-8896-8400a18b98f4",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d69754a3-40b7-44f5-90d5-e55fbeddd553",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "activate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}